Fix peerDependencies in survey-vue3-ui

--- a/packages/survey-vue3-ui/publish/package.json
+++ b/packages/survey-vue3-ui/publish/package.json
@@ -19,9 +19,7 @@
     "url": "https://github.com/surveyjs/surveyjs.git"
   },
   "peerDependencies": {
-    "vue": "^3.2.41"
-  },
-  "dependencies": {
+    "vue": "^3.2.41",
     "survey-core": "*"
   }
 }
