Fix peerDependencies for survey-vue-ui, survey-react-ui, survey-vue-ui

--- a/build-scripts/survey-knockout-ui/package.json
+++ b/build-scripts/survey-knockout-ui/package.json
@@ -27,8 +27,10 @@
       ]
     }
   },
+  "peerDependencies": {
+    "survey-core": "*"
+  },
   "dependencies": {
-    "survey-core": "*",
     "knockout": "^3.5.0"
   }
 }
