--- a/build-packages.yml
+++ b/build-packages.yml
@@ -158,7 +158,7 @@ jobs:
           pmes.json
           surveyjs_definition.json
         TargetFolder: "$(Build.SourcesDirectory)/service/surveyjs.io/App_Data/DocsLibrary"
-        CleanTargetFolder: true
+        CleanTargetFolder: false
       displayName: "copy generated docs to the local surveyjs/service repo"
 
     # read about the problem with git output ($env:GIT_REDIRECT_STDERR = '2>&1') :
