--- a/build-scripts/survey-jquery-ui/package.json
+++ b/build-scripts/survey-jquery-ui/package.json
@@ -15,13 +15,16 @@
   "files": [
     "**/*"
   ],
-  "main": "survey.jquery-ui.js",
+  "main": "survey-jquery-ui.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/surveyjs/surveyjs.git"
   },
-  "typings": "survey.jquery.d.ts",
+  "typings": "survey-jquery-ui.d.ts",
   "dependencies": {
     "jquery": ">=1.12.4"
+  },
+  "peerDependencies": {
+    "survey-core": "*"
   }
 }
