Update build-packages.yml for Azure Pipelines

--- a/build-packages.yml
+++ b/build-packages.yml
@@ -158,6 +158,7 @@ jobs:
           pmes.json
           surveyjs_definition.json
         TargetFolder: "$(Build.SourcesDirectory)/service/surveyjs.io/App_Data/DocsLibrary"
+        OverWrite: true
         CleanTargetFolder: false
       displayName: "copy generated docs to the local surveyjs/service repo"
 
