Update devops-pull-requests-parallel-jobs.yml for Azure Pipelines

--- a/devops-pull-requests-parallel-jobs.yml
+++ b/devops-pull-requests-parallel-jobs.yml
@@ -303,7 +303,7 @@ jobs:
         npm run testcafe:ci:vue3
       displayName: "run functional tests"
 
-- job: JqueryUI-Preact
+- job: JqueryUIPreact
   steps:
     - checkout: self
       persistCredentials: true
