--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "build_angular_prod": "webpack --config ./build-scripts/survey-angular/webpack.config.js --env.buildType prod",
     "build_i18n_dev": "webpack --config ./build-scripts/survey-core/webpack.i18n.js --env.buildType dev",
     "build_i18n_prod": "webpack --config ./build-scripts/survey-core/webpack.i18n.js --env.buildType prod",
-    "build_dev": "concurrently \"npm run build_knockout_dev\" \"npm run build_react_dev\" \"npm run build_angular_dev\" \"npm run build_jquery_dev\" \"npm run build_jquery_ui_dev\" \"npm run build_vue_dev\" \"npm run build_core_dev\" \"npm run build_i18n_dev\"",
-    "build_prod": "npm run build_dev && concurrently \"npm run build_knockout_prod\" \"npm run build_react_prod\" \"npm run build_angular_prod\" \"npm run build_jquery_prod\" \"npm run build_jquery_ui_prod\" \"npm run build_vue_prod\" \"npm run build_core_prod\" \"npm run build_i18n_prod\"",
+    "build_dev": "concurrently \"npm run build_knockout_dev\" \"npm run build_react_dev\" \"npm run build_angular_dev\" \"npm run build_jquery_dev\" \"npm run build_vue_dev\" \"npm run build_core_dev\" \"npm run build_i18n_dev\"",
+    "build_prod": "npm run build_dev && concurrently \"npm run build_knockout_prod\" \"npm run build_react_prod\" \"npm run build_angular_prod\" \"npm run build_jquery_prod\" \"npm run build_vue_prod\" \"npm run build_core_prod\" \"npm run build_i18n_prod\"",
     "build": "npm run build_prod && concurrently \"npm run build_knockout_ui_dev && npm run build_knockout_ui_prod\" \"npm run build_react_ui\"",
     "doc_gen": "node doc_generator/lib_docgenerator.js src/entries/chunks/model.ts",
     "doc_update": "chmod +x ./docupdate_npm.sh && ./docupdate_npm.sh",
