jquery-ui pipe https://github.com/surveyjs/survey-library/issues/8245

--- a/jqyery-ui.yml
+++ b/jqyery-ui.yml
@@ -71,6 +71,6 @@ jobs:
     #   displayName: "run markup tests"
 
     - script: |
-        npm run testcafe:jquery-ui
+        npm run testcafe:jquery-ui:ci
       displayName: "run functional tests"
 
