--- a/devops-pull-requests-parallel-jobs.yml
+++ b/devops-pull-requests-parallel-jobs.yml
@@ -303,66 +303,86 @@ jobs:
         npm run testcafe:ci:vue3
       displayName: "run functional tests"
 
-# - job: JqueryUIPreact
-#   steps:
-#     - checkout: self
-#       persistCredentials: true
-#       clean: true
+- job: JqueryUI
+  dependsOn:
+    - NPMCache
 
-#     - task: NodeTool@0
-#       inputs:
-#         versionSpec: "14.x"
-#       displayName: "Install Node.js"
+  steps:
+    - checkout: self
+    - checkout: EmptyRepo
+      persistCredentials: true
+      clean: true
 
-#     - task: CopyFiles@2
-#       inputs:
-#         SourceFolder: "$(Build.SourcesDirectory)/"
-#         Contents: "package.json"
-#         TargetFolder: "$(Build.SourcesDirectory)/Temp/"
-#         OverWrite: true
-#       displayName: "Copy package.json for cache key"
+    - task: NodeTool@0
+      inputs:
+        versionSpec: "14.x"
+      displayName: "Install Node.js"
 
-#     - task: Cache@2
-#       inputs:
-#         key: 'npm-cache-library | $(Build.SourcesDirectory)/Temp/package.json'
-#         path: $(Build.SourcesDirectory)/node_modules
-#         cacheHitVar: NPM_CACHE_RESTORED
-#       displayName: Cache NPMs
+    - task: CopyFiles@2
+      inputs:
+        SourceFolder: "$(Build.SourcesDirectory)/survey-library/"
+        Contents: "package.json"
+        TargetFolder: "$(Build.SourcesDirectory)/Temp/"
+        OverWrite: true
+      displayName: "Copy package.json for cache key"
+    - task: Cache@2
+      inputs:
+        key: 'npm-cache-library | $(Build.SourcesDirectory)/Temp/package.json'
+        path: $(Build.SourcesDirectory)/survey-library/node_modules
+        cacheHitVar: NPM_CACHE_RESTORED
+      displayName: Cache NPM
 
-#     - task: Npm@1
-#       displayName: 'NPM install'
-#       inputs:
-#         command: install
-#         verbose: false
-#       condition: ne(variables.NPM_CACHE_RESTORED, 'true')
+    # setup next release version
+    - task: DownloadBuildArtifacts@0
+      inputs:
+        buildType: "specific"
+        project: "af2804d2-859a-4705-9ef5-cdf46d1d5d4f"
+        pipeline: "47"
+        buildVersionToDownload: "latest"
+        downloadType: "single"
+        artifactName: "ReleaseVersionFile"
+        downloadPath: "$(System.ArtifactsDirectory)"
 
-#     - script: |
-#         npm run build_core
-#         npm run build_i18n
-#         npm run build-plugins
-#       displayName: "Build Core"
+    - task: CopyFiles@2
+      inputs:
+        SourceFolder: "$(System.ArtifactsDirectory)/ReleaseVersionFile/"
+        Contents: "version.txt"
+        TargetFolder: "$(Build.SourcesDirectory)/"
+        OverWrite: true
+      displayName: "Copy Build Artifact - SurveyJSVersion File"
 
-#     - script: |
-#         npm run build_jquery-ui_prod
-#       displayName: "Build jquery-ui_prod"
+    - powershell: |
+        $version = Get-Content $(Build.SourcesDirectory)/version.txt
+        Write-Host "##vso[task.setvariable variable=SurveyJSVersion;]$version"
+      displayName: "setup SurveyJSVersion variable from SurveyJSVersionFile"
+    ##########################################################################
 
-#     - script: |
-#         npm run test:postcss
-#       displayName: "check postcss compatibility"
+    - task: Npm@1
+      displayName: 'NPM install'
+      inputs:
+        command: install
+        verbose: false
+        workingDir: $(Build.SourcesDirectory)/survey-library
+      condition: ne(variables.NPM_CACHE_RESTORED, 'true')
 
-#     - script: |
-#         npm run testsingle
-#       displayName: "run unit tests"
-    
-#     - script: |
-#         npm run lint
-#       displayName: "eslint check"
+    - script: |
+        cd $(Build.SourcesDirectory)/survey-library
+        npm run release -- --release-as $(SurveyJSVersion)
+        git status
+      displayName: "npm run release"
 
-    # - script: |
-    #     npm run test:jquery-ui:single
-    #   displayName: "run markup tests"
+    - script: |
+        npm run build_core
+        npm run build_i18n
+        npm run build-plugins
+      displayName: "Build Core"
 
-    # - script: |
-    #     npm run testcafe:jquery-ui
-    #   displayName: "run functional tests"
+    - script: |
+        npm run build_jquery_ui_prod
+      displayName: "Build jquery-ui"
+
+    - script: |
+        cd $(Build.SourcesDirectory)/survey-library
+        npm run testcafe:jquery-ui:ci
+      displayName: "run functional tests"
 
