--- a/devops-pull-requests-parallel-jobs.yml
+++ b/devops-pull-requests-parallel-jobs.yml
@@ -328,31 +328,6 @@ jobs:
         cacheHitVar: NPM_CACHE_RESTORED
       displayName: Cache NPM
 
-    # setup next release version
-    - task: DownloadBuildArtifacts@0
-      inputs:
-        buildType: "specific"
-        project: "af2804d2-859a-4705-9ef5-cdf46d1d5d4f"
-        pipeline: "47"
-        buildVersionToDownload: "latest"
-        downloadType: "single"
-        artifactName: "ReleaseVersionFile"
-        downloadPath: "$(System.ArtifactsDirectory)"
-
-    - task: CopyFiles@2
-      inputs:
-        SourceFolder: "$(System.ArtifactsDirectory)/ReleaseVersionFile/"
-        Contents: "version.txt"
-        TargetFolder: "$(Build.SourcesDirectory)/"
-        OverWrite: true
-      displayName: "Copy Build Artifact - SurveyJSVersion File"
-
-    - powershell: |
-        $version = Get-Content $(Build.SourcesDirectory)/version.txt
-        Write-Host "##vso[task.setvariable variable=SurveyJSVersion;]$version"
-      displayName: "setup SurveyJSVersion variable from SurveyJSVersionFile"
-    ##########################################################################
-
     - task: Npm@1
       displayName: 'NPM install'
       inputs:
@@ -360,12 +335,6 @@ jobs:
         verbose: false
         workingDir: $(Build.SourcesDirectory)
       condition: ne(variables.NPM_CACHE_RESTORED, 'true')
-
-    - script: |
-        cd $(Build.SourcesDirectory)
-        npm run release -- --release-as $(SurveyJSVersion)
-        git status
-      displayName: "npm run release"
 
     - script: |
         npm run build_core
@@ -379,5 +348,52 @@ jobs:
 
     - script: |
         npm run testcafe:jquery-ui:ci
+      displayName: "run functional tests"
+
+- job: SurveyUI
+  steps:
+    - checkout: self
+      persistCredentials: true
+      clean: true
+
+    - task: NodeTool@0
+      inputs:
+        versionSpec: "14.x"
+      displayName: "Install Node.js"
+
+    - task: CopyFiles@2
+      inputs:
+        SourceFolder: "$(Build.SourcesDirectory)/"
+        Contents: "package.json"
+        TargetFolder: "$(Build.SourcesDirectory)/Temp/"
+        OverWrite: true
+      displayName: "Copy package.json for cache key"
+    - task: Cache@2
+      inputs:
+        key: 'npm-cache-library | $(Build.SourcesDirectory)/Temp/package.json'
+        path: $(Build.SourcesDirectory)/node_modules
+        cacheHitVar: NPM_CACHE_RESTORED
+      displayName: Cache NPM
+
+    - task: Npm@1
+      displayName: 'NPM install'
+      inputs:
+        command: install
+        verbose: false
+        workingDir: $(Build.SourcesDirectory)
+      condition: ne(variables.NPM_CACHE_RESTORED, 'true')
+
+    - script: |
+        npm run build_core
+        npm run build_i18n
+        npm run build-plugins
+      displayName: "Build Core"
+
+    - script: |
+        npm run build_ui_prod
+      displayName: "Build jquery-ui"
+
+    - script: |
+        npm run testcafe:survey-ui:ci
       displayName: "run functional tests"
 
