add no-imports-from-entries rule

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,7 @@
 	"rules": {
 		"surveyjs/no-test-only": 2,
 		"surveyjs/no-test-debug": 2,
+		"surveyjs/no-imports-from-entries": 2,
 		"no-console": 2, // Remember, this means error!
 		"indent": [
 			"error",
