--- a/devops-pull-requests-parallel-jobs.yml
+++ b/devops-pull-requests-parallel-jobs.yml
@@ -111,6 +111,10 @@ jobs:
 
     - script: |
         npm run build_react_prod
+        npm run build_core
+        npm run build_react_ui
+        npm run build_i18n
+        npm run build-plugins
       displayName: "Build React"
 
     - script: |
