--- a/devops-accessibility-tests.yml
+++ b/devops-accessibility-tests.yml
@@ -115,7 +115,7 @@ jobs:
       verbose: false
     condition: ne(variables.NPM_CACHE_RESTORED, 'true')
   
-  - script: |
+  - powershell: |
       npm run build_react_prod
       npm run build_core
       npm run build_i18n
