Update devops-visual-regression-tests.yml for Azure Pipelines

--- a/devops-visual-regression-tests.yml
+++ b/devops-visual-regression-tests.yml
@@ -114,7 +114,7 @@ jobs:
       verbose: false
     condition: ne(variables.NPM_CACHE_RESTORED, 'true')
   
-  - script: |
+  - powershell: |
       npm run build_react_prod
       npm run build_core
       npm run build_i18n
