--- a/build-scripts/survey-ui/tsconfig.typing.ui.json
+++ b/build-scripts/survey-ui/tsconfig.typing.ui.json
@@ -27,6 +27,7 @@
     "skipLibCheck": true
   },
   "include": [
+    "../../src/entries/ui.ts",
     "../../src/entries/react-ui-model.ts"
   ],
 }
