--- a/build-scripts/survey-js-ui/tsconfig.typing.ui.json
+++ b/build-scripts/survey-js-ui/tsconfig.typing.ui.json
@@ -27,7 +27,7 @@
     "skipLibCheck": true
   },
   "include": [
-    "../../src/entries/ui.ts",
+    "../../src/entries/js-ui.ts",
     "../../src/entries/react-ui-model.ts"
   ],
 }
