--- a/build-scripts/survey-js-ui/package.json
+++ b/build-scripts/survey-js-ui/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "survey-ui",
-  "version": "1.8.33",
+  "name": "survey-js-ui",
+  "version": "1.11.7",
   "description": "survey.js is a JavaScript Survey Library. It is a modern way to add a survey to your website. It uses JSON for survey metadata and results.",
   "keywords": [
     "Survey",
@@ -15,14 +15,13 @@
   "files": [
     "**/*"
   ],
-  "main": "survey-ui.js",
+  "main": "survey-js-ui.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/surveyjs/surveyjs.git"
   },
-  "typings": "survey-ui.d.ts",
-  "dependencies": {
-  },
+  "typings": "survey-js-ui.d.ts",
+  "dependencies": {},
   "peerDependencies": {
     "survey-core": "*"
   }
