--- a/devops-visual-regression-tests.yml
+++ b/devops-visual-regression-tests.yml
@@ -486,11 +486,11 @@ jobs:
     displayName: "Build Core"
 
   - script: |
-      npm run build_ui_prod
-    displayName: "Build survey-ui"
+      npm run build_js_ui_prod
+    displayName: "Build survey-js-ui"
 
   - script: |
-      npm run vrt:survey-ui:ci
+      npm run vrt:survey-js-ui:ci
     displayName: "Visual Regression Tests"
 
   - task: CopyFiles@2
