--- a/packages/survey-vue3-ui/package.json
+++ b/packages/survey-vue3-ui/package.json
@@ -10,6 +10,9 @@
     "build": "vite build && npm run build:types",
     "build:dev": "vite build --mode development",
     "build:types": "vue-tsc --project tsconfig.types.json --emitDeclarationOnly",
+    "serve:example:dev": "npm run dev --prefix ./example",
+    "serve:example:prod": "npm run preview --prefix ./example",
+    "build:example:prod": "npm run build --prefix ./example",
     "type-check": "vue-tsc --project tsconfig.types.json --noEmit",
     "test": "vitest --no-threads tests/*.spec.ts",
     "test:single": "vitest --no-watch --no-threads tests/*.spec.ts",
