Fix buid_core and build_react_ui commands to work via ts loader

--- a/build-scripts/survey-core/tsconfig.json
+++ b/build-scripts/survey-core/tsconfig.json
@@ -1,3 +1,12 @@
 {
- "extends": "../tsconfig.json"
+  "extends": "../tsconfig.json",
+  "compilerOptions": {
+    "baseUrl": ".",
+    "declaration": true,
+    "declarationDir": "../../build/survey-core/typings"
+  },
+  "include": [
+    "../../src/entries/core.ts"
+  ],
+  "exclude": [],
 }
