--- a/build-scripts/survey-react-ui/package.json
+++ b/build-scripts/survey-react-ui/package.json
@@ -19,7 +19,7 @@
     "type": "git",
     "url": "https://github.com/surveyjs/surveyjs.git"
   },
-  "typings": "survey-react-ui.d.ts",
+  "typings": "./typings/entries/react-ui-model.d.ts",
   "peerDependencies": {
     "survey-core": "*",
     "react": "^16.5.0 || ^17.0.1 || ^18.2.0",
