--- a/packages/survey-react-ui/package.json
+++ b/packages/survey-react-ui/package.json
@@ -41,7 +41,6 @@
         "devextreme-screenshot-comparer": "^2.0.11",
         "dotenv": "4.0.0",
         "eslint": "^7.32.0",
-        "get-func-name": "2.0.0",
         "github-api": "^3.4.0",
         "html-webpack-plugin": "^5.6.0",
         "http-server": "^14.1.1",
@@ -50,15 +49,18 @@
         "jest-environment-jsdom": "^29.7.0",
         "mini-css-extract-plugin": "^2.9.0",
         "node-uuid": "1.4.7",
+        "react": "^17.0.1",
+        "react-dom": "^17.0.1",
         "react-test-renderer": "^17.0.1",
         "rimraf": "2.5.4",
         "sass": "^1.62.1",
         "sass-loader": "^8.0.2",
         "shelljs": "^0.8.3",
-        "standard-version": "^8.0.2",
+        "standard-version": "^9.5.0",
         "style-loader": "^1.2.1",
+        "survey-core": "../../build/survey-core",
         "surveyjs-doc-generator": "git+https://github.com/surveyjs/surveyjs-doc-generator.git",
-        "testcafe": "3.3.0",
+        "testcafe": "3.6.2",
         "ts-jest": "^29.2.2",
         "ts-loader": "^8.0.15",
         "tsconfig-paths-webpack-plugin": "^3.3.0",
@@ -66,9 +68,6 @@
         "url-loader": "^4.1.1",
         "webpack": "^5.93.0",
         "webpack-cli": "^5.1.4",
-        "webpack-dev-server": "^5.0.4",
-        "survey-core": "../../build/survey-core",
-        "react": "^17.0.1",
-        "react-dom": "^17.0.1"
+        "webpack-dev-server": "^5.0.4"
     }
 }
