--- a/packages/survey-react-ui/package.json
+++ b/packages/survey-react-ui/package.json
@@ -20,7 +20,13 @@
         "url": "https://github.com/surveyjs/surveyjs.git"
     },
     "scripts": {
-        "build": "webpack --env buildType=dev && webpack --env buildType=prod"
+        "build": "webpack --env buildType=dev && webpack --env buildType=prod",
+        "testcafe": "testcafe chrome ../../testCafe/ --selector-timeout 1500 --app \"http-server --silent\" --env=react",
+        "testcafe:ci": "testcafe chrome:headless -c 4 -q attemptLimit=5,successThreshold=1 ../../testCafe/ --selector-timeout 1500 --app \"http-server --silent\" --env=react",
+        "testcafe:a11y": "testcafe chrome ./accessibilityTests/ --app \"http-server\" --screenshots ./ --reporter minimal --selector-timeout 1500 --env=react",
+        "testcafe:a11y:ci": "testcafe chrome:headeless -c 4 -q ./accessibilityTests/ --app \"http-server\" --screenshots ./ --reporter minimal --selector-timeout 1500 --env=react",
+        "visual-regression-tests": "testcafe chrome --disable-font-subpixel-positioning ../../visualRegressionTests/ --app \"http-server\" --screenshots ../../ --selector-timeout 1500 --env=react",
+        "visual-regression-tests:ci": "testcafe chrome:headless -c 4 -q attemptLimit=5,successThreshold=1 --disable-font-subpixel-positioning ../../visualRegressionTests/ --app \"http-server\" --screenshots ../../ --selector-timeout 1500 --env=react"
     },
     "typings": "./typings/src/entries/react-ui.d.ts",
     "devDependencies": {
@@ -41,7 +47,6 @@
         "devextreme-screenshot-comparer": "^2.0.11",
         "dotenv": "4.0.0",
         "eslint": "^7.32.0",
-        "github-api": "^3.4.0",
         "html-webpack-plugin": "^5.6.0",
         "http-server": "^14.1.1",
         "jest": "^29.7.0",
