--- a/build-scripts/survey-vue/tsconfig.plugins.themes.typing.json
+++ b/build-scripts/survey-vue/tsconfig.plugins.themes.typing.json
@@ -12,6 +12,6 @@
     "outDir": "../../build/survey-vue/themes/typings/"
   },
   "include": [
-    "../../src/themes/index.ts"
+    "../../packages/survey-core/src/themes/index.ts"
   ]
 }
