Prepare survey-js-ui for survey-creator-js

--- a/build-scripts/survey-js-ui/package.json
+++ b/build-scripts/survey-js-ui/package.json
@@ -20,7 +20,7 @@
     "type": "git",
     "url": "https://github.com/surveyjs/surveyjs.git"
   },
-  "typings": "survey-js-ui.d.ts",
+  "typings": "./typings/src/entries/js-ui.d.ts",
   "dependencies": {},
   "peerDependencies": {
     "survey-core": "*"
